<resources>
    <string name="app_name">NUMBER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CLOSE">CLOSE</string>
    <string name="OPEN">OPEN</string>
    <string name="NO">NO</string>
    <string name="TYPE_R">R</string>
    <string name="D5">D5</string>
    <string name="title_activity_miracle">พยากรณ์หมายเลขโทรศัพท์</string>
    <string name="title_activity_tabian_miracle">พยากรณ์เลขทะเบียนรถ</string>
    <string name="title_activity_home_miracle">พยากรณ์เลขที่บ้าน</string>
    <string name="title_activity_name_miracle">พยากรณ์ชื่อสกุล</string>
    <string name="title_activity_nickname_miracle">พยากรณ์ชื่อเล่น</string>
    <string name="title_activity_home_mira">พยากรณ์บ้านเลขที่</string>
    <string name="title_activity_name_mira">NameMiraAct</string>
    <string name="title_activity_auth">AuthAct</string>
    <string name="pair_gone">gone</string>
    <string name="pair_visible">visible</string>
    <string name="dup_pair_more0">คู่ซ้ำมากเกินไป ไม่ดี ระวังชีวิตขาดความสมดุล!!</string>
    <string name="dup_pair_more1">คู่ 0X,X0 มีมากกว่า 1 ระวังมีโรคร้ายเกิดและมีภัยอันตรายเกิดกะทันหัน!!  ใครที่ป่วยหรือเป็นโรคเรื้อรังไม่ควรใช้</string>
    <string name="hint_phonenum">0956515454</string>
    <string name="wait_phone_vip">0956515454</string>
    <string name="title_activity_tabian_home">TabianHomeActivity</string>
    <string name="title_activity_tabian_cal">TabianCalActivity</string>
    <string name="title_activity_tabian_buy_all">TabianBuyAllAct</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dup_miracle">คู่ซ้ำมากเกินไป ไม่ดี ระวังชีวิตขาดความสมดุล!!</string>
    <string name="str_countPairZero">คู่ 0X,X0 มีมากกว่า 1 ระวังมีโรคร้ายเกิดและมีภัยอันตรายเกิดกะทันหัน!!  ใครที่ป่วยหรือเป็นโรคเรื้อรังไม่ควรใช้</string>
    <string name="title_activity_home">HomeAct</string>
    <string name="title_activity_name_nice_cal">NameNiceCalAct</string>
    <string name="title_activity_name_sur_cal">NameSurCalAct</string>
    <string name="title_activity_name_nick_list">เลือกชื่อเล่นตามวันเกิด : </string>
    <string name="title_activity_user_regis">UserRegisAct</string>
    <string name="title_activity_user_login">UserLoginAct</string>
    <string name="title_activity_user_logout">หน้าสมาชิก</string>
    <string name="beeb_register">ผู้ที่ลงทะเบียนเป็นสมาชิก</string>
    <string name="mongkol_contact">ติดต่อซื้อเบอร์มงคล หรือ เปิดดวงชะตา</string>
    <string name="click">CLICK</string>
    <string name="admin_recomment">เพื่อความแม่นยำสูงสุดควรดูร่วมกับคำทำนายและเปิดดวงชะตาประกอบ</string>
    <string name="header_phone_ad">หลักการเบื้องต้นในการเลือกเบอร์โทรศัพท์มงคล</string>
    <string name="caption_phone_ad">ดีที่สุด เสี่ยงน้อยที่สุด คุ้มค่าที่สุด ต้องคำนึงถึง</string>
    <string name="detail_01">ควรต้องเป็นเลขโฉลกที่มากับพื้นดวง จึงต้องเปิดดวงเจาะเลขจาก วัน เดือน ปีเกิด เวลาเกิด จังหวัดที่เกิด รวมทั้งตัวเลขทั้งดีและร้าย ที่มีสะสมอยู่ในชีวิตของบุคคลนั้นๆก่อนจึงจะดีที่สุด</string>
    <string name="detail_02">เมื่อเปิดดวงเจาะเลข วิเคราะห์ดวง วิเคราะห์เลขแล้วควรเลี่ยงเลขกรรมเลขร้ายที่ติดตามในพื้นดวงของเจ้าชะตา แล้ววางเลขบุญเลขดีเพื่อส่งเสริมดวงชะตาตามตำแหน่ง</string>
    <string name="detail03">เลขทุกคู่ในเบอร์ต้องดี มีพลังเต็ม สลับหน้าสลับหลังแล้วต้องดี</string>
    <string name="detail04">ต้องมีเลขแฝงดีทุกคู่ หรือ ถ้าหาไม่ได้ ต้องพยายามให้มีเลขแฝงที่มีความหมายไปในทางร้ายรุนแรงน้อยที่สุด</string>
    <string name="detail05">ถ้าหาเบอร์ที่ดีทุกคู่ทั้งเลขหลักเลขแฝงไม่ได้จริงๆให้มองหาเบอร์ที่มีสี่คู่ท้ายดี หรือ อย่างน้อยๆต้องมีสามคู่ท้ายดีในเบอร์ และคู่ที่เหลือต้องไม่ใช่เลขร้ายรุนแรง</string>
    <string name="detail06">โดยเฉพาะเลขหลักเลขแฝงในสองคู่ท้าย สำคัญมากต้องดี ควรเป็นเลขถูกโฉลกดวงและต้องเลือกให้ดีกับตนให้มากที่สุด</string>
    <string name="detail07">และสุดท้ายที่สำคัญคือ เบอร์นั้นต้องได้ผลรวมที่ดีจึงจะดีที่สุด แต่ถ้าคุณมีงบประมาณจำกัด จำเป็นต้องใช้ไปก่อน ถ้าเลขในเบอร์มันดีกว่าเบอร์เก่าเยอะมากแล้ว แถมเป็นเลขโฉลกดวง นั่นก็อนุโลมให้ใช้ได้ก่อนชั่วคราว ระวังถ้าผลรวมเบอร์ไม่ดีต้องย้อนกลับไปดูเลขภายในเบอร์ว่า มันมีเลขคุ้มครองและมีเลขพลังเต็มเยอะไม่ หรือมีเลขอันตรายเยอะรึเปล่า ถ้าในเบอร์มีเลขอันตรายเยอะ แถมผลรวมยังอันตรายต้องระวังให้มาก ถ้าเลือกได้อย่าใช้ โดยผลรวมเลขอันตรายที่เราอนุโลมให้ใช้ได้คือ 47,35,53,40,52,39,25,28,38 และ43,49 (เลขเหล่านี้ใช้ได้เฉพาะบางคนต้องเช็คพื้นดวงก่อน และต้องดูเลขคู่ในเบอร์ภายในประกอบ</string>
    <string name="txt_contectus">ติดต่อเรา : </string>
    <string name="admin_phonenumber">เบอร์ 09-5651-5454 และ 09-5636-4599</string>
    <string name="admin_service">บริการของเรา</string>
    <string name="admin_service01">-รับเปิดดวงชะตาดูดวงประจำปีเพื่อให้รู้ดีรู้ร้ายล่วงหน้าและเพื่อเตรียมการป้องกัน แก้ไข และเปลี่ยนแปลงเลขเปลี่ยนแปลงดวงชะตาตามวาระที่คู่ควร</string>
    <string name="admin_servince02">-รับเปิดดวงชะตาเพื่อเจาะพื้นดวงและเจาะเลข วิเคราะห์ดวง วางเลขวางเบอร์</string>
    <string name="admin_servince03">-รับวางเลขเบอร์โทรศัพท์ทะเบียนรถและบ้านเลขที่มงคลตรงตามพื้นดวงและโฉลกดวง</string>
    <string name="admin_service04">-รับตั้งชื่อเล่นชื่อจริงนามสกุลมงคลทั้งเด็กและผู้ใหญ่ตรงตามพื้นดวงและโฉลกดวงชะตา</string>
    <string name="admin_servince05">***เบอร์โทรศัพท์มงคลทุกเบอร์มีจริง ทะเบียนรถมงคลทุกป้ายมีจริงออกโดยกรมขนส่งอย่างถูกต้องตามกฎหมายและสามารถใช้ได้กับรถใหม่ป้ายแดง หรือรถที่มีเลขทะเบียนอยู่แล้วได้จริง</string>
    <string name="titel_vision_homenum">สิ่งที่ต้องคำนึงถึง</string>
    <string name="impotant_home01">สำคัญมาก บ้านเลขที่ต้องถูกโฉลกกับเจ้าชะตา โดยต้องดูจากวันเดือนปีเกิด เวลาเกิด จังหวัดที่เกิดของเจ้าชะตาเท่านั้น และที่สำคัญห้ามลืม ต้องไม่ใช่เลขกรรม หรือเลขร้ายอันตรายตรงกับเลขอื่นๆ ที่ติดตามในชีวิตตนอยู่แล้ว เช่น ในเบอร์โทรศัพท์ ในชื่อเล่น ในชื่อจริงนามสกุล ดังนั้น บ้านเลขที่ที่จะใช้ ต้องไม่มีเลขร้าย เพิ่มขึ้นมาอีกซ้ำเติมดวงเด็ดขาด เพราะจะทำให้เจ้าชะตา ต้องเจอกับเรื่องร้ายๆที่มีความหมายตรงตามเลขร้ายง่ายขึ้น บ่อยขึ้น เร็วขึ้น แรงขึ้น เป็นต้น</string>
    <string name="impotan_home02">สำคัญมากเลขเรียงต้องดี ไม่มีเลขคู่อันตราย จับคู่สลับหน้าสลับหลังแล้วต้องดี โดยเฉพาะถ้าเป็นเลขร้ายหรือมีความหมายที่ไปตรงกับเลขร้ายๆ ที่มีอยู่แล้วในเบอร์โทรศัพท์ ชื่อเล่น ชื่อจริงนามสกุล บ้านเลขที่เดิม เพราะถ้าเป็นเช่นนั้นความรุนแรงของเลขจะเพิ่มขึ้น แม้มีเลขดีอยู่บ้างพอสมควร ความดีความเฮงก็จะลดทอนลงเพราะมีเลขร้ายมาดึงหน่วงเพิ่มเติม และชีวิตของเขาก็จะต้องเจอทั้งเรื่องดีและร้ายตรงเลขทั้งดีและร้ายแน่นอน</string>
    <string name="impotant_home03">สำคัญผลรวมเลขต้องดี ไม่ใช่เลขร้ายอันตราย และต้องไม่ใช่เลขกรรมที่ตามติด....ระวัง!! ก่อนทำการเปลี่ยนป้ายบ้านเลขที่ เจ้าของบ้านควรใช้ฤกษ์ดีตรงโฉลกในการถอดป้ายเก่า และติดป้ายใหม่จึงจะดีที่สุด</string>
    <string name="impotant_home04">เลขตัวแรกกับเลขตัวสุดท้ายของบ้านเลขที่เมื่อจับคู่กัน และนำมาบวกกันแล้ว ต้องได้เลขดี เช่น 42/45 เลขตัวแรกคือ 4 เลขตัวสุดท้าย คือ 5 เมื่อจับคู่กันได้ 45 และเมื่อบวกกันยังได้ 9 ซึ่งเป็นเลขศุภเคราะห์อีกนี่ดีมาก</string>
    <string name="impotant_home05">ที่ดีที่สุด ปลอดภัยที่สุด บ้านเลขที่ต้องเน้นความปลอดภัยและคุ้มครองดวงเป็นหลัก และบ้านเลขที่ที่ดีที่สุดควรส่งเสริมหนุนนำเจ้าของให้ได้ดีมีสุขครบทุกด้าน คือ เงินงาน ความรัก ความสุข และต้องมีเลขคุ้มครองชะตา ช่วยยืดอายุ ต่อเวลา เสริมสุขภาพและช่วยให้แคล้วคลาดไว้ด้วยโดยต้องมีคู่หนึ่งคู่ใดเป็นเลขคุ้มครอง(ไม่ซวยหนักดวงถึงฆาตหนักจริงๆจะรอดได้) สรุปแล้วบ้านเลขที่ที่ดีที่สุด เป็นเลขดี 100% ไม่มีเสนียดติด ต้องมีคุณสมบัติต้องได้เลขดีครบทั้งหมดทุกข้อจากที่กล่าวมาบวกด้วย</string>
    <string name="line_id">number636595</string>
    <string name="contact_miracle_home">ติดต่อซื้อป้ายบ้านเลขที่ หรือเปิดดวง</string>
    <string name="txt_exhome">ตัวอย่างป้ายบ้านเลขที่ของเรา</string>
    <string name="contact_miraphone">ติดต่อซื้อเบอร์มงคล หรือ เปิดดวงชะตา</string>
    <string name="tabain_vision">ดีที่สุด เสี่ยงน้อยที่สุด คุ้มค่าที่สุด ต้องคำนึงถึง</string>
    <string name="tabian_recument01">สำคัญมากทะเบียนรถต้องถูกโฉลกกับเจ้าชะตา ทั้งตัวหมวดตัวอักษร และตัวเลข โดยต้องดูจากวันเดือนปีเกิด เวลาเกิด จังหวัดที่เกิดของเจ้าชะตาเท่านั้น และที่สำคัญห้ามลืม ต้องไม่ใช่เลขกรรม หรือเลขร้ายอันตรายตรงกับเลขอื่นๆ ที่ติดตามในชีวิตตนอยู่แล้ว เช่น ในเบอร์โทรศัพท์ ในชื่อเล่น ในชื่อจริงนามสกุล บ้านเลขที่ ซึ่งมีเลขร้าย เช่น 26,25(อนุโลมถ้าเลขเรียงดี อนุโลม) 13 34 33 37 70 39 18 80 66 67 และ...ฯลฯ อยู่แล้ว ดังนั้น ทะเบียนรถ ที่จะใช้ ต้องไม่มีเลขร้าย 26 13 34 33 37 70 39 18 80 66 67 และ....ฯลฯ เพิ่มขึ้นมาอีกเด็ดขาด เพราะจะทำให้เจ้าชะตา ต้องเจอกับเรื่องร้ายๆที่มีความหมายตรงตามเลขร้ายบ่อยขึ้น เร็วขึ้น แรงขึ้น เป็นต้น</string>
    <string name="tabian_recoment02">สำคัญมากเลขเรียงต้องดี ไม่มีเลขคู่อันตราย สลับหน้าสลับหลังแล้วต้องดี เช่น ทะเบียน 4กธ4245 ทะเบียนนี้ เลขเรียงดีมากเพราะได้ 414-4245 สลับหน้า สลับหลังก็ยังดีมาก ไม่มีเลขเสนียดจัญไรตามติดเลย แต่ถ้าเป็นทะเบียนรถ 4กต4245 ผลจะตรงกันข้าม แม้จะเป็นเลขเลข 4245 เหมือนกันก็ตาม แต่เพราะตัวหมวด 4 กต ไม่มีมงคล แถมเมื่อแปลงออกมาเป็นเลขแล้วไม่ดีมาก เพราะเลขเรียงติดเลขร้ายแรง 413-4245 คือ 13 และ 34 ซึ่งอนาคตจะมีผลร้ายๆเกิดตรงเลข 13 ,34 ในไม่ช้าแน่นอน หรือ ถ้าเป็นทะเบียน 4กธ9339 (414-9338) นี้อันตรายมาก เพราะเลขเรียงไม่ดีมาก เพราะติดเลขร้ายแรง 49(13) 93(12) 33 38 หนักเลย ซึ่งเลขร้ายเหล่านี้จะมีผลกับเจ้าของมากขึ้น โดยเฉพาะถ้าเป็นเลขร้ายหรือมีความหมายที่ไปตรงกับเลขร้ายๆ ที่มีอยู่แล้วในเบอร์โทรศัพท์ ชื่อเล่น ชื่อจริงนามสกุล บ้านเลขที่ ถ้าเป็นเช่นนั้นความรุนแรงของเลขจะเพิ่มขึ้น แม้มีเลขดีอยู่บ้างพอสมควร ความดีก็จะลดทอนลง และชีวิตเขาก็จะต้องเจอทั้งเรื่องดีและร้ายตรงเลขแน่นอน</string>
    <string name="tabian_recoment03">สำคัญผลรวมเลขต้องดี ไม่ใช่เลขร้ายอันตราย และต้องไม่ใช่เลขกรรมที่ตามติด เช่น ทะเบียน 4กธ4245 ทะเบียนนี้ผลรวมดีมากๆ 4+2+4+5 เพราะได้ 15 แต่ถ้าเป็นทะเบียน 4กธ9338 อันตรายมากเพราะมีเลขเรียงร้าย แถมผลรวมเลขยังร้ายอีก 9+3+3+8 เพราะได้เลข 23 หรือ ทะเบียนรถ 4กธ999 นี่ก็อันตราย 9+9+9 เพราะได้ 27 เช่นกัน</string>
    <string name="tabian_recomment04">สำคัญผลรวมหมวดต้องดี ไม่ใช่เลขร้ายอันตราย และต้องไม่ใช่เลขกรรมที่ตามอยู่ เช่น ทะเบียน 4กธ4245 ทะเบียนนี้ผลรวมหมวดดีมาก 4+1+4+4+2+4+5 เพราะได้ 24 แต่ถ้าเป็นทะเบียน 4กฉ999 นี้เสี่ยงอันตรายมากเพราะได้ผลรวมเลข 27 แถมเสี่ยงและอันตรายเพิ่มมากขึ้นเมื่อผลรวมหมวดได้เลขร้ายเพิ่ม เช่น ทะเบียน 4กฉ999 จะได้ผลรวมหมวด 4+1+5+9+9+9+=37</string>
    <string name="tabian_recoment05">ตัวเลขและตัวอักษรหมวดของทะเบียน เมื่อนำมาแตกเป็นตัวเลขแล้วต้องได้คู่ดี ไม่ใช่เลขร้าย ไม่ใช่เลขกรรมที่ตามติด เช่น 4กธ4245 จะได้ 414 นี้ดีมากๆ แต่ถ้าเปลี่ยนเป็น 4กต4245 นี้ต่าง เพราะได้ 413 นี่อันตราย ในข้อนี้บางครั้งอาจจะอนุโลมได้ในบางกรณี เช่น ถ้าเลขทะเบียนเก่าที่ใช้อยู่มันแรงร้ายมากๆ ประกอบกับโดนจำกัดด้วยเวลาแล้ว ข้อนี้อาจจะอนุโลมได้คะ แต่ระวัง สำคัญมาก คือเมื่อแปลงเป็นตัวเลขแล้วห้ามเป็นเลขร้ายแรงร้าย ที่สำคัญอย่างน้อยตัวอักษรหมวดต้องถูกโฉลกกับตนไม่ใช้อักษรที่ไม่ดีกับดวงตน</string>
    <string name="tabian_recomment06">เลขตัวแรกกับเลขตัวสุดท้ายของทะเบียนรถเมื่อจับคู่กัน และนำมาบวกกันแล้ว ต้องได้เลขดี เช่น ทะเบียน 4245 เลขตัวแรกคือ 4 เลขตัวสุดท้าย คือ 5 เมื่อจับคู่กันได้ 45 และเมื่อบวกกันยังได้ 9 ซึ่งเป็นเลขศุภเคราะห์อีกนี่ดีมาก ยิ่งถ้าทะเบียนใดได้เลข 45 รวมกันได้ 9 ทะเบียนนี้จะยิ่งดีมากขึ้น คุ้มครองดีเยี่ยม เพราะตัวเลขตัวหน้าน้อยกว่าตัวหลังแถมยังจับคู่และบวกได้เลขมงคล 45 และ 9</string>
    <string name="tabian_recoment07">ทะเบียนรถที่ดีที่สุด ปลอดภัยที่สุด ต้องเน้นความปลอดภัยและคุ้มครองดวงเป็นหลัก และทะเบียนที่ดีที่สุดควรส่งเสริมหนุนนำเจ้าของให้ได้ดีมีสุขครบทุกด้าน คือ เงินงาน ความรัก ความสุข และต้องมีเลขคุ้มครองชะตา ช่วยยืดอายุ ต่อเวลา เสริมสุขภาพและช่วยให้แคล้วคลาดไว้ด้วยโดยต้องมีคู่หนึ่งคู่ใดเป็นเลขคุ้มครอง(ไม่ซวยหนักดวงถึงฆาตหนักจริงๆจะรอดได้) สรุปแล้วทะเบียนที่ดีที่สุด เป็นเลขดี 100% ไม่มีเสนียดติด ต้องมีคุณสมบัติต้องได้เลขดีครบทั้งหมดทุกข้อจากที่กล่าวมาบวกด้วย</string>
</resources>