<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F3F1ED"
    android:layout_marginTop="2dp"
    android:paddingBottom="9dp">
    <RelativeLayout
        android:background="#F9FCF9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <LinearLayout
            android:background="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <LinearLayout
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgAdHeader"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/yellowstar" />
                    <LinearLayout
                        android:background="#F2F5F2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtAdHeader"
                        android:padding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"

                        android:background="#F2F5F2"
                        android:text="@string/txt_contectus"
                        android:textColor="#26972B"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <TextView

                        android:padding="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"

                        android:background="#F2F5F2"
                        android:text="@string/admin_phonenumber"
                        android:textColor="#F77206"
                        android:textSize="15sp"
                         />
                    </LinearLayout>
                </LinearLayout>



                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/browa_0"
                        android:text="@string/admin_service"
                        android:textStyle="bold"
                        android:textColor="#2E7D32"
                        android:textSize="20sp"/>

                    <View

                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:background="@android:color/darker_gray" />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/browa_0"
                    android:text="@string/admin_service01"
                    android:textColor="#1E4403"
                    android:textSize="20sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/browa_0"
                        android:text="@string/admin_servince02"
                        android:textColor="#1E4403"
                        android:textSize="20sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/browa_0"
                        android:text="@string/admin_servince03"
                        android:textColor="#1E4403"
                        android:textSize="20sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/browa_0"
                        android:text="@string/admin_service04"
                        android:textColor="#1E4403"
                        android:textSize="20sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/browa_0"
                        android:text="@string/admin_servince05"
                        android:textColor="#1E4403"
                        android:textSize="20sp"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>