<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeAdF">

    <LinearLayout
        android:id="@+id/li_ad_home"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:padding="9dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_clover" />

                <TextView
                    android:id="@+id/txt_percent_d"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="9dp"
                    android:text="@string/contact_miracle_home"
                    android:textColor="#04B40B"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="ติดต่อซื้อป้ายบ้านเลขที่ หรือเปิดดวง" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_add_line"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:text="CLICK"
                    android:textSize="11sp"
                    android:textColor="#FFF"
                    app:backgroundTint="#00b106"
                    app:chipBackgroundColor="#00b106"
                    app:chipStrokeColor="#FFF"
                    app:chipStrokeWidth="2dp"
                    app:chipStartPadding="20dp"
                    app:chipEndPadding="20dp"
                    app:chipMinHeight="44dp" />

            </LinearLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ลบ RibbonLayout ออกเพราะมันซ่อน content -->
            <LinearLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2d2d2d"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00b106"
                        android:fontFamily="@font/browa_0"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="หลักการเบื้องต้นในการเปลี่ยนบ้านเลขที่"
                        android:textColor="#FFF"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linDesc"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#5c5c5c"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/browa_0"
                            android:text="1. "
                            android:textColor="#F7E337"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/browa_0"
                            android:text="@string/impotant_home01"
                            android:textColor="#FFF"
                            android:textSize="20sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/browa_0"
                            android:text="2. "
                            android:textColor="#F7E337"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/browa_0"
                            android:text="@string/impotan_home02"
                            android:textColor="#FFF"
                            android:textSize="20sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/browa_0"
                            android:text="3. "
                            android:textColor="#F7E337"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/browa_0"
                            android:text="@string/impotant_home03"
                            android:textColor="#FFF"
                            android:textSize="20sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/browa_0"
                            android:text="4. "
                            android:textColor="#F7E337"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/browa_0"
                            android:text="@string/impotant_home04"
                            android:textColor="#FFF"
                            android:textSize="20sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/browa_0"
                            android:text="5. "
                            android:textColor="#F7E337"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/browa_0"
                            android:text="@string/impotant_home05"
                            android:textColor="#FFF"
                            android:textSize="20sp" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_marginTop="0.5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#515151"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/txt_exhome"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#515151"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_exhome01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_homebox01" />

            <ImageView
                android:id="@+id/img_exhome02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_homebox02" />


            <ImageView
                android:id="@+id/img_exhome03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ex_home02" />

            <ImageView
                android:id="@+id/img_exhome04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ex_home03" />
            <ImageView
                android:id="@+id/img_exhome05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ex_home04" />
        </LinearLayout>


        <include layout="@layout/item_footer" />



    </LinearLayout>

</FrameLayout>